[package]
name = "piscina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "log",
    "tracing",
]

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

tracing = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
futures-test = "0.3"
