[package]
name = "piscina"
version = "0.1.2"
edition = "2021"
description = "A simple generic pool that supports both sync and async"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/piscina/"
homepage = "https://github.com/minghuaw/piscina"
repository = "https://github.com/minghuaw/piscina"
keywords = ["pool", "async"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Optional dependencies
tracing = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
futures-test = "0.3"
futures = "0.3"
